finish prepare list
